--- a/src/main/resources/templates/showAllUsers.html
+++ b/src/main/resources/templates/showAllUsers.html
@@ -63,14 +63,13 @@
 
 <nav class="navbar navbar-dark bg-dark fixed-top">
     <a class="navbar-brand ml-5" style="color: white; font-family: 'Roboto', sans-serif; font-size: 20px;">
-<!--        <span th:text="${currentUser.email}" class="font-weight-bold"></span>-->
         <span th:each="role : ${currentUser.roles}"
-              th:text="${role.name.replace('ROLE_', '')} + ' '">
+              th:text="${role.name.replace('ROLE_', '')} + ' '"></span>
         <span> with roles: </span>
         <span th:each="role : ${currentUser.roles}" th:text="${role.name} + ' '"></span>
     </a>
     <form th:action="@{/logout}" th:method="POST" class="d-inline">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button class="btn btn-link text-secondary font-size-20" type="submit">Logout</button>
     </form>
 </nav>
@@ -94,13 +93,6 @@
             </button>
         </a>
     </div>
-<!--    <div sec:authorize="hasAnyRole('USER','ADMIN')">-->
-<!--        <a th:href="@{'/user'}">-->
-<!--            <button class="menu-btn" style="background-color: #057AFB; color: white;">-->
-<!--                User-->
-<!--            </button>-->
-<!--        </a>-->
-<!--    </div>-->
 </div>
 
 <div class="container-main">
@@ -109,10 +101,12 @@
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
-                <a class="nav-link active" id="users-tab" data-toggle="tab" href="#users" role="tab" aria-controls="users" aria-selected="true">Users</a>
+                <a class="nav-link active" id="users-tab" data-toggle="tab" href="#users" role="tab"
+                   aria-controls="users" aria-selected="true">Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="newuser-tab" data-toggle="tab" href="#newuser" role="tab" aria-controls="newuser" aria-selected="false">New User</a>
+                <a class="nav-link" id="newuser-tab" data-toggle="tab" href="#newuser" role="tab"
+                   aria-controls="newuser" aria-selected="false">New User</a>
             </li>
         </ul>
 
@@ -151,12 +145,14 @@
                             <td th:each="role : ${user.roles}" th:text="${role.name}">...</td>
                             <td>
                                 <!-- Кнопка "Update" с открытием модального окна -->
-                                <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" th:attr="data-target='#updateModal' + ${user.id}">
+                                <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                                        th:attr="data-target='#updateModal' + ${user.id}">
                                     Update
                                 </button>
 
                                 <!-- Кнопка "Delete" с открытием модального окна -->
-                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" th:attr="data-target='#deleteModal' + ${user.id}">
+                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+                                        th:attr="data-target='#deleteModal' + ${user.id}">
                                     Delete
                                 </button>
                             </td>
@@ -185,32 +181,41 @@
                 </div>
                 <div class="modal-body">
                     <form th:action="@{/admin/editUser}" method="post">
-                        <input type="hidden" name="id" th:value="${user.id}" />
+                        <input type="hidden" name="id" th:value="${user.id}"/>
                         <div class="row">
                             <div class="col-md-8 mx-auto">
                                 <div class="form-group text-center">
                                     <label th:attr="for='username' + ${user.id}" class="control-label font-weight-bold">Username</label>
-                                    <input type="text" class="form-control" th:id="'username' + ${user.id}" th:value="${user.username}" name="username" />
+                                    <input type="text" class="form-control" th:id="'username' + ${user.id}"
+                                           th:value="${user.username}" name="username"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label th:attr="for='firstName' + ${user.id}" class="control-label font-weight-bold">First Name</label>
-                                    <input type="text" class="form-control" th:id="'firstName' + ${user.id}" th:value="${user.firstName}" name="firstName" />
+                                    <label th:attr="for='firstName' + ${user.id}"
+                                           class="control-label font-weight-bold">First Name</label>
+                                    <input type="text" class="form-control" th:id="'firstName' + ${user.id}"
+                                           th:value="${user.firstName}" name="firstName"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last Name</label>
-                                    <input type="text" class="form-control" th:id="'lastName' + ${user.id}" th:value="${user.lastName}" name="lastName" />
+                                    <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last
+                                        Name</label>
+                                    <input type="text" class="form-control" th:id="'lastName' + ${user.id}"
+                                           th:value="${user.lastName}" name="lastName"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label th:attr="for='age' + ${user.id}" class="control-label font-weight-bold">Age</label>
-                                    <input type="number" class="form-control" th:id="'age' + ${user.id}" th:value="${user.age}" name="age" />
+                                    <label th:attr="for='age' + ${user.id}"
+                                           class="control-label font-weight-bold">Age</label>
+                                    <input type="number" class="form-control" th:id="'age' + ${user.id}"
+                                           th:value="${user.age}" name="age"/>
                                 </div>
                                 <div class="form-group text-center">
                                     <label th:attr="for='email' + ${user.id}" class="control-label font-weight-bold">Email</label>
-                                    <input type="email" class="form-control" th:id="'email' + ${user.id}" th:value="${user.email}" name="email" />
+                                    <input type="email" class="form-control" th:id="'email' + ${user.id}"
+                                           th:value="${user.email}" name="email"/>
                                 </div>
                                 <div class="form-group text-center">
                                     <label th:attr="for='password' + ${user.id}" class="control-label font-weight-bold">Password</label>
-                                    <input type="password" class="form-control" th:id="'password' + ${user.id}" th:value="${user.password}" name="password" />
+                                    <input type="password" class="form-control" th:id="'password' + ${user.id}"
+                                           name="password"/>
                                 </div>
                                 <div class="form-group text-center">
                                     <label th:attr="for='enabled' + ${user.id}" class="control-label font-weight-bold">Enabled</label>
@@ -220,12 +225,13 @@
                                     </select>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label th:attr="for='roles' + ${user.id}" class="control-label font-weight-bold">Roles</label>
-                                    <select class="form-control" th:id="'roles' + ${user.id}" name="roleIds" multiple>
+                                    <label th:attr="for='roleIds' + ${user.id}" class="control-label font-weight-bold">Roles</label>
+                                    <select class="form-control" th:id="'roleIds' + ${user.id}" name="roleIds" multiple>
                                         <option th:each="role : ${allRoles}"
                                                 th:value="${role.id}"
                                                 th:text="${role.name}"
-                                                th:selected="${user.roles.contains(role)}">
+                                                th:selected="${user.roles != null && #lists.contains(user.roles.![id], role.id)}">
+
                                         </option>
                                     </select>
                                 </div>
@@ -259,31 +265,43 @@
                         <div class="col-md-8 mx-auto">
                             <div class="form-group text-center">
                                 <label th:attr="for='id' + ${user.id}" class="control-label font-weight-bold">ID</label>
-                                <input type="text" class="form-control" th:id="'id' + ${user.id}" th:value="${user.id}" name="id" readonly />
+                                <input type="text" class="form-control" th:id="'id' + ${user.id}" th:value="${user.id}"
+                                       name="id" readonly/>
                             </div>
                             <div class="form-group text-center">
                                 <label th:attr="for='username' + ${user.id}" class="control-label font-weight-bold">Username</label>
-                                <input type="text" class="form-control" th:id="'username' + ${user.id}" th:value="${user.username}" name="username" readonly />
+                                <input type="text" class="form-control" th:id="'username' + ${user.id}"
+                                       th:value="${user.username}" name="username" readonly/>
                             </div>
                             <div class="form-group text-center">
-                                <label th:attr="for='firstName' + ${user.id}" class="control-label font-weight-bold">First Name</label>
-                                <input type="text" class="form-control" th:id="'firstName' + ${user.id}" th:value="${user.firstName}" name="firstName" readonly />
+                                <label th:attr="for='firstName' + ${user.id}" class="control-label font-weight-bold">First
+                                    Name</label>
+                                <input type="text" class="form-control" th:id="'firstName' + ${user.id}"
+                                       th:value="${user.firstName}" name="firstName" readonly/>
                             </div>
                             <div class="form-group text-center">
-                                <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last Name</label>
-                                <input type="text" class="form-control" th:id="'lastName' + ${user.id}" th:value="${user.lastName}" name="lastName" readonly />
+                                <label th:attr="for='lastName' + ${user.id}" class="control-label font-weight-bold">Last
+                                    Name</label>
+                                <input type="text" class="form-control" th:id="'lastName' + ${user.id}"
+                                       th:value="${user.lastName}" name="lastName" readonly/>
                             </div>
                             <div class="form-group text-center">
-                                <label th:attr="for='age' + ${user.id}" class="control-label font-weight-bold">Age</label>
-                                <input type="number" class="form-control" th:id="'age' + ${user.id}" th:value="${user.age}" name="age" readonly />
+                                <label th:attr="for='age' + ${user.id}"
+                                       class="control-label font-weight-bold">Age</label>
+                                <input type="number" class="form-control" th:id="'age' + ${user.id}"
+                                       th:value="${user.age}" name="age" readonly/>
                             </div>
                             <div class="form-group text-center">
-                                <label th:attr="for='email' + ${user.id}" class="control-label font-weight-bold">Email</label>
-                                <input type="email" class="form-control" th:id="'email' + ${user.id}" th:value="${user.email}" name="email" readonly />
+                                <label th:attr="for='email' + ${user.id}"
+                                       class="control-label font-weight-bold">Email</label>
+                                <input type="email" class="form-control" th:id="'email' + ${user.id}"
+                                       th:value="${user.email}" name="email" readonly/>
                             </div>
                             <div class="form-group text-center">
-                                <label th:attr="for='roles' + ${user.id}" class="control-label font-weight-bold">Roles</label>
-                                <select class="form-control" th:id="'roles' + ${user.id}" name="roles" multiple disabled>
+                                <label th:attr="for='roles' + ${user.id}"
+                                       class="control-label font-weight-bold">Roles</label>
+                                <select class="form-control" th:id="'roles' + ${user.id}" name="roles" multiple
+                                        disabled>
                                     <option th:each="role : ${user.roles}" th:text="${role.name}"></option>
                                 </select>
                             </div>
@@ -293,7 +311,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <form th:action="@{/admin/deleteUser}" method="post">
-                        <input type="hidden" name="id" th:value="${user.id}" />
+                        <input type="hidden" name="id" th:value="${user.id}"/>
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
                 </div>
